@@ -1,7 +1,8 @@
 AUX atheme-5.0.1-depend-parallel.patch 457 RMD160 32c03cad4e1b3432b97370961f5d402006f6f404 SHA1 bbff9d88d95496aa750578012a25ba392627a889 SHA256 abbb351d50baf483bd37e2c2ad5eaa2dcf7a483cb5bda4f25910af8b9dd11305
 AUX atheme-5.0.1-ldap-as-needed.patch 493 RMD160 3894b824bb6848695b63eae569fa2c6826c60a2e SHA1 ad15750f9c0a952fef7d595dd035e351800a3517 SHA256 da31b6a830860914d160bc0436a20a37f1fbce2c73ed2b8234ab46791e6e376f
 AUX atheme-5.0.1-with-ldap.patch 758 RMD160 28831504041ba3ec47cede827027e609f0f51d84 SHA1 1abd522ddc6cdb735347afc9013f6c9b8446cc7f SHA256 f65bccd4df149f6e1205a803dc0da29805bc864cb988a75c4ffaee4267db5901
+AUX atheme.initd 475 RMD160 c30e6093c4a95d3524e2ee3dacdad8638d58d253 SHA1 3f8ab87b47796a77f658641200018a36f210c091 SHA256 19cdf77845f765c2fef2e152de2f688f3eea2e675d92345d45bcd28462641df4
 DIST atheme-services-5.0.1.tar.bz2 694093 RMD160 c97f6a36f628f7d31d88aeb8247645aab2f8c469 SHA1 e351af2a53bd08ed38c25dd601cae026ed4ace29 SHA256 db749339a88fb80397163ddbad219dca857b5a28e7a9bde6e456b769be0491b7
-EBUILD atheme-5.0.1.ebuild 1723 RMD160 214eefa2ae734f6187889b172987c19e1ff87e0e SHA1 73a8560ab62c02f6b30320841c60994e86ae9507 SHA256 8b50456da208d88930e366b2606795bf2b6435ff2edb82dcf6f20f01bb4c59d8
-MISC ChangeLog 462 RMD160 1e0604caefa79c122fa34fb6f34e7b984d946eb0 SHA1 84df47c4bf0ac4f219a078d45366aa4b4cc09bb2 SHA256 5991d55d714bc3c03711b8fb0ccdfda2a2515fe4c42e6dbbd642b78f929b4961
+EBUILD atheme-5.0.1.ebuild 2500 RMD160 192536e72d77cb6b90a37c99514c24e27a3e7a4d SHA1 3763c7f0aae9d7cae4a31611d7857315e5e8d747 SHA256 edfeb5bd1c50a8092f72d0690960a7c789a775957a6380ce9ae5105d0ecc731a
+MISC ChangeLog 774 RMD160 42ec74582ef255712c8259543210e02ef39b8357 SHA1 ca6b577c68d032f0f89bc6f0fa3bd0af20a75137 SHA256 75218c039ff125853971600b5fda70f70e45ce6d229fb963f2ea6c093980ca55
 MISC metadata.xml 248 RMD160 529d56c0d04b30a5cec5675e3104bd26911a7666 SHA1 f4fabea23c086a1f70709f74e2f4eb083e2c78aa SHA256 f3c501f041eb7ea6edcd5adfe691133e8c9070f0d7cf7edb4774fce9d496b16e
